--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header id="main-header">
 
-        <h1>DT Quizzes</h1>
+        <h1><a id="overview-link" href="#">DT Quizzes</a></h1>
 
         <nav id="main-nav">
             <label for="toggle"><img src="images/menu.svg"></label>
@@ -38,6 +38,9 @@
 
     <main>
         <h1 id="title"></h1>
+
+        <article id="overview" class="hide">
+        </article>
 
         <article id="info" class="hide">
             <p>Select a quiz from the menu...</p>
@@ -57,16 +60,15 @@
         </article>
 
         <article id="feedback" class="hide">
-            <section id="correct">Correct! Well done!</section>
+            <section id="correct">Correct. Well done!</section>
             <section id="wrong">Nope! Try again...</section>
             <section id="feedback-message"></section>
         </article>
-
-        <script>initialiseQuiz();</script>
-        <script>window.Prism = window.Prism || {}; window.Prism.manual = true;</script>
-        <script src="scripts/prism.js"></script>
     </main>
         
+    <script>initialiseQuiz();</script>
+    <script>window.Prism = window.Prism || {}; window.Prism.manual = true;</script>
+    <script src="scripts/prism.js"></script>
 </body>
 
 </html>
