Better format for quizzes and randomisation of answer display

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header id="main-header">
 
-        <h1><a id="overview-link" href="#">DT Quizzes</a></h1>
+        <h1 id="main-heading">DT Quizzes</h1>
 
         <nav id="main-nav">
             <label for="toggle"><img src="images/menu.svg"></label>
@@ -30,6 +30,7 @@
             <ul id="main-nav-links">
                 <label for="toggle"><img src="images/close.svg"></label>
                 <label id="overlay" for="toggle"></label>
+                <li id="overview-link">Overview</li>
                 <li class="main-nav-section"></li>
             </ul>
         </nav>
