Added support for Scratch code - pretty neat!

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/prism.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/scratch.css">
 
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>    
     <script src="scripts/quiz.js"></script>
@@ -70,6 +71,7 @@
     <script>initialiseQuiz();</script>
     <script>window.Prism = window.Prism || {}; window.Prism.manual = true;</script>
     <script src="scripts/prism.js"></script>
+    <script src="scripts/scratch.js"></script>
 </body>
 
 </html>
