Web preview for HTML/CSS quizzes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/prism.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/web.css">
     <link rel="stylesheet" href="css/scratch.css">
 
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>    
