--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/scratch.css">
 
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+    <script src="scripts/swiped-events.js"></script>
     <script src="scripts/quiz.js"></script>
 </head>
 
