--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/web.css">
     <link rel="stylesheet" href="css/scratch.css">
+    <link rel="stylesheet" href="css/pseudo.css">
+    <link rel="stylesheet" href="css/mermaid.css">
 
-    <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+    
     <script src="scripts/swiped-events.js"></script>
     <script src="scripts/quiz.js"></script>
 </head>
@@ -73,6 +77,7 @@
     <script>window.Prism = window.Prism || {}; window.Prism.manual = true;</script>
     <script src="scripts/prism.js"></script>
     <script src="scripts/scratch.js"></script>
+    <script src="scripts/pseudo.js"></script>
 </body>
 
 </html>
