--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     </header>
 
-    <main>
+    <main id="main-content">
         <h1 id="title"></h1>
 
         <article id="overview" class="hide">
